Tech day/events.css
@font-face
{font-family: 'EricssonHilda-Regular';
   src: url('fonts/EricssonHilda-Regular.otf') format('OpenType');
   }

@font-face {
   font-family: 'EricssonHilda-Light';
   src: url('fonts/EricssonHilda-Light.otf') format('OpenType');
   }
@font-face {
   font-family: 'EricssonHilda-Medium';
   src: url('fonts/EricssonHilda-Medium.otf') format('OpenType');
   }
@font-face {
   font-family: 'EricssonHilda-Bold';
   src: url('fonts/EricssonHilda-Bold.otf') format('OpenType');
   }




.navbar {
    background-color: #111;
    overflow: hidden;
    height:63px;
}

.navbar a {
    float: left;
    display: block;
    text-align: center;
    padding:14px 16px;
    text-decoration: none;
    font-size:17px;
    color:#f2f2f2;
    font-family: 'EricssonHilda-Regular';
}

.navbar ul{
    margin:8px 0 0 0;
    list-style:none;
}

.side-nav{
    height:100%;
    width:0;
    position:fixed;
    z-index:1;
    top:0;
    left:0;
    background-color: #111;
    opacity: 0.9;
    overflow-x:hidden;
    padding-top:60px;
    transition:1s;
    text-align: left;
}

.side-nav a{
    padding:10px 10px 10px 10px 10px 10px 10px;
    text-decoration: none;
    font-size:22px;
    color:#fff;
    transition:0.7s;
    float: left;
    font-family: 'EricssonHilda-Regular';
    text-align: left;
}

.side-nav .btn-close{
    position: absolute;
    top:0;
    right:22px;
    font-size:36px;
    margin-left:50px;
}

.side-nav ul li{
    text-align:left;
    text-decoration: none;
    list-style: none;
    padding:1em;
}


#main{
    transition:margin-left 0.5s;
    padding:20px;
    overflow: hidden;
    width: 100%;
}


@media screen and (max-width: 800px){
    .navbar {
       background-color:white;
    }

    .navbar a{
        color:white;
    }
}

@media screen and (min-width:800px){
    .open-slide{
        display:none;
    }
}
.modal-content {
    padding:9px 15px;
     border-radius: 30px;
     text-align: center;
     margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
    color: white;
 }

.grid > div {
  padding:1em;
}

.grid {
    display: grid;
    align-self: auto;

    grid-template-columns: 100%;
    grid-auto-rows: auto ;
    grid-template-areas: "top "
                         "middle-left"
                         "bottom-left";
    text-align: center;
}

table{
    text-align: left;
    font-family:'EricssonHilda-Regular';
    font: 30px;
    padding: 10%
}
tr#THREE{
    font-family:'EricssonHilda-Bold';
    
}
img  {
    display: block;
    width: 100%;
    height:80%;
    position: relative;
    margin: auto;
    border-radius:5px; 
}

button{
    position:sticky;
    width: 100%;
    height:80%;
    position:sticky;
    border-radius:20px; 
    padding:30px;
    font-family:'EricssonHilda-Regular';
    color:white;

}
.zoneOne{
    background-color: #00ff00;
    font-family: "EricssonHilda-Regular";
    
    
}
.zoneTwo{
    background-color: #ff6600 ;
    font-family: "EricssonHilda-Regular";
}
.zoneThree{
    background-color: rgb(33, 82, 53);
    font-family: "EricssonHilda-Regular";
}
.zoneFour{
    background-color: #490d30;
    font-family: "EricssonHilda-Regular";
}
.zoneFive{
    background-color: rgb(31, 182, 241);
    font-family: "EricssonHilda-Regular";
}.zoneSix{
    background-color: red;
    font-family: "EricssonHilda-Regular";
}.zoneSeven{
    background-color: rgb(255, 230, 4);
    font-family: "EricssonHilda-Regular";
}
#zoneOne2{
    background-color: #00ff00;
    font-family: "EricssonHilda-Regular";
}
#zoneTwo2{
    background-color: #ff6600 ;
    font-family: "EricssonHilda-Regular";
}
#zoneThree2{
    background-color: rgb(33, 82, 53);
    font-family: "EricssonHilda-Regular";
}
#zoneFour2{
    background-color: #490d30;
    font-family: "EricssonHilda-Regular";
}
#zoneFive2{
    background-color: rgb(31, 182, 241);
    font-family: "EricssonHilda-Regular";
}#zoneSix2{
    background-color: red;
    font-family: "EricssonHilda-Regular";
}#zoneSeven2{
    background-color: rgb(255, 230, 4);
    font-family: "EricssonHilda-Regular";
}

.address{
    font-family: "EricssonHilda-Regular";
    font-size: 17px;
    text-align: center;
    position: relative;
    margin: auto;
    border: 5px solid black;
    display: grid;
    border-radius:15px; 
    background-color: black;
    color:white;
  
}

